self_repl: update int'l img, start ramp fns.

--- a/self_repl_fns/self_repl_fns.bib
+++ b/self_repl_fns/self_repl_fns.bib
@@ -23,7 +23,7 @@
   series    = {The Art of Computer Programming},
   publisher = {Addison-Wesley},
   volume    = 1,
-  edition   = "Third",
+  edition   = {Third Ed.},
   year      = 1998
 }
 
