--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -190,7 +190,7 @@ indicator functions can be considered simple self-replicating functions:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/pdfs/added_intervals3.pdf}
+\includegraphics{images/pdfs/added_intervals4.pdf}
 \caption{Visual representation of the addition of indicator functions of
 intervals.}
 \end{figure}
@@ -252,8 +252,8 @@ Here is a reference (Knuth, Patashnik, and Graham 1997).
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
 
-Knuth, Donald E. 1998. \emph{Fundamental Algorithms}. Third. Vol. 1. The
-Art of Computer Programming. Addison-Wesley.
+Knuth, Donald E. 1998. \emph{Fundamental Algorithms}. Third Ed. Vol. 1.
+The Art of Computer Programming. Addison-Wesley.
 
 Knuth, Donald E., Oren Patashnik, and Ronald L. Graham. 1997.
 \emph{Concrete Mathematics: A Foundation for Computer Science}.
