self_repl: Iterate on the added normals image.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -74,9 +74,10 @@ particular, it depends on the ambiguous notion of ``strong resemblance''
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/pdfs/added_normals2.pdf}
-\caption{The normal curve can be expressed as the sum of two symmetric
-normal-like curves.}
+\includegraphics{images/pdfs/added_normals3.pdf}
+\caption{As an example of a self-replicating function, the normal curve
+can be expressed as the sum of two normal-like curves that are
+reflections of each other.}
 \end{figure}
 
 \section{Motivation}\label{motivation}
