self_repl: Standardize the image style and colors.
I wish it were easier for me to update all of them at once. I might be able to
get closer to that by using a stylesheet for the image colors and assigning the
relevant svg elements to classes. In order to make the end-to-end system easier,
that would also require using svg images in html. Even then, though, it is still
a best practice to have a png file as a fallback.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -198,7 +198,7 @@ indicator functions can be considered simple self-replicating functions:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/pdfs/added_intervals4.pdf}
+\includegraphics{images/pdfs/added_intervals5.pdf}
 \caption{Visual representation of the addition of indicator functions of
 intervals.}
 \end{figure}
@@ -223,7 +223,7 @@ Then \(J_{0,1,4,5} = J_{0,1,2,3} + J_{2,3,4,5}\), as illustrated below.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/pdfs/ramp_fns.pdf}
+\includegraphics{images/pdfs/ramp_fns2.pdf}
 \caption{Visual addition of two ramp functions to form another.}
 \end{figure}
 
