self_repl: Clarify def'n of K-functions.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -287,8 +287,8 @@ could be replaced by curves with the shapes of \(x^2\) and \(1-x^2\) on
 \(x\in [0, 1]\) to determine the edge shapes.}
 \end{figure}
 
-Given any function \(f:[0,1]\to [0,1]\), form of this case is the
-function
+Given any function \(f:[0,1]\to [0,1]\), the generalized ramp function
+is
 
 \[ K_{a,b,c,d} = \begin{cases}
 f\big((x - a) / (b - a)\big) & \text{if } x \in [a, b), \\
