self_repl: Fix the def'n of peak monotonic.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -310,8 +310,8 @@ elements. Even among continuous functions, we can produce
 self-replicating functions which avoid being ``mostly monotonic.'' In
 particular, I'll say that a function \(f:\mathbb{R}\to\mathbb{R}\) is
 \emph{peak monotonic} iff there is a point \(x\) such that
-\(a < b < x \Rightarrow f(a) < f(b)\) and
-\(x < c < d \Rightarrow f(c) > f(d)\). The indicator function of an
+\(a < b < x \Rightarrow f(a) \le f(b)\) and
+\(x < c < d \Rightarrow f(c) \ge f(d)\). The indicator function of an
 interval and the ramp function are both peak monotonic, while the
 example \(K-\)functions below are not.
 
