self_repl: Add a new question for the future.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -376,6 +376,15 @@ Here is a reference (Knuth, Patashnik, and Graham 1997).
 \item
   The histogram around my first \emph{L}-system appears simple in shape.
   Can its shape be described precisely?
+\item
+  The sigmoid \(\sigma(x)=1/(1+e^{-x})\) provides a
+  near-self-replicating split of \(e^{-x^2}\). Is there a function
+  \(f(x)\) such that \(\sigma(x)\) provides an \emph{exact}
+  self-replicating split? More than one? In general, given any sigmoid
+  \(s(x)\), what is the set of functions which it splits exactly in this
+  way? For this question, we can have some precise requirement for a
+  sigmoid, such as being an appropriately scaled and translated odd and
+  bounded function.
 \end{itemize}
 
 \section*{References}\label{references}
