self_repl: Start write-up of non-plateau fns.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -329,6 +329,38 @@ function more discontinuous than the indicator function of an interval;
 on the bottom is a continuous but non-peak-monotonic function.}
 \end{figure}
 
+\subsection{Non-plateau functions}\label{non-plateau-functions}
+
+The ramp functions \(K_{a,b,c,d}\) so far all have the constant value 1
+on the middle interval \([b, c]\). This requires the ramps on intervals
+\([a, b]\) and \([c, d]\) to sum to 1. What happens if we relax this
+condition?
+
+I'll describe a sequence of functions which may help us find a
+self-replicating function by starting with an arbitrary function. The
+sequence depends on an initial function \(f(x)\), a shift function
+\(s(x)\) that captures the relationship between the left and right
+addends, and transformation functions \(t_1(x)\) and \(t_2(x)\) that
+formalize the similarity between the addends and their sum.
+
+Given these functions, we can define
+
+\[\begin{array}{rcl}
+  f_L(x) & = & f(x), \\
+  f_R(x) & = & f(s(x)), \text{and} \\
+  f_S(x) & = & f_L(x) + f_R(x), \\
+\end{array}\]
+
+with the expectation that
+
+\[f_L(x) = t_2(f_S(t_1(x))).\]
+
+In other words, \(f_L\) and \(f_R\) are possibly-reflected shifts of
+each other, and \(f_S\) can be transformed to recover exactly \(f_L\).
+If a
+
+So far we haven't formally stated the similarity relationship between
+
 \section{The normal curve}\label{the-normal-curve}
 
 The normal curve is described by \(y = e^{-x^2/2}\).
@@ -348,6 +380,9 @@ This section is for functions similar to the Cantor diagonal. It may
 turn out that I can't find any functions that fit here, or that the
 \emph{L}-systems distributions includes this case, or even that I can
 prove that no functions could exist here (as far as I know).
+
+TODO Add a note somewhere that the initial setup requires that the sum
+itself is always the translation of an even function.
 
 \section{Temporary example content}\label{temporary-example-content}
 
@@ -383,8 +418,13 @@ Here is a reference (Knuth, Patashnik, and Graham 1997).
   self-replicating split? More than one? In general, given any sigmoid
   \(s(x)\), what is the set of functions which it splits exactly in this
   way? For this question, we can have some precise requirement for a
-  sigmoid, such as being an appropriately scaled and translated odd and
-  bounded function.
+  sigmoid, such as being an appropriately scaled and translated odd
+  function.
+\item
+  Are there variants of self-replicating functions that work for other
+  sets of operations such as using more than two copies of the function
+  in a sum, or by using multiplication or some other operation instead
+  of addition?
 \end{itemize}
 
 \section*{References}\label{references}
