self_repl: Work on improving non-plateau intro.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -331,10 +331,31 @@ on the bottom is a continuous but non-peak-monotonic function.}
 
 \subsection{Non-plateau functions}\label{non-plateau-functions}
 
-The ramp functions \(K_{a,b,c,d}\) so far all have the constant value 1
-on the middle interval \([b, c]\). This requires the ramps on intervals
-\([a, b]\) and \([c, d]\) to sum to 1. What happens if we relax this
-condition?
+The ramp functions \(K_{a,b,c,d}\) all have the constant value 1 on the
+middle interval \([b, c]\). This requires the ramps on intervals
+\([a, b]\) and \([c, d]\) to sum to 1. In this section, I'll consider
+what can happen if we relax this condition.
+
+\subsubsection{A formal definition for self-replicating
+functions}\label{a-formal-definition-for-self-replicating-functions}
+
+I think the term \emph{self-replicating function} is best left as an
+intuitive, non-rigorous concept because there seem to be a wide variety
+of instances that are best studied via their own particular flavors of a
+formal definition. A number of other terms used to discuss mathematics
+are similarly unformalized or context-specific: consider \emph{fractal},
+\emph{symmetry}, or \emph{closure} as examples. Nonetheless, many
+self-replicating functions meet the conditions of the definition I'll
+present next.
+
+Call a function \(f\) \emph{exactly self-replicating} iff there exist
+continuous bijections \(s\), \(t_1\), and \(t_2\) such that
+
+TODO finish from here; don't forget that \(s\) can't be the identity
+function
+
+\subsubsection{Begin other stuff to
+rewrite}\label{begin-other-stuff-to-rewrite}
 
 I'll describe a sequence of functions which may help us find a
 self-replicating function by starting with an arbitrary function. The
@@ -355,11 +376,21 @@ with the expectation that
 
 \[f_L(x) = t_2(f_S(t_1(x))).\]
 
-In other words, \(f_L\) and \(f_R\) are possibly-reflected shifts of
-each other, and \(f_S\) can be transformed to recover exactly \(f_L\).
-If a
+This setup supports the possibility that \(f_L\) and \(f_R\) are
+possibly-reflected shifts of each other, and requires \(f_S\) can be
+transformed to recover exactly \(f_L\). This is one possible way to
+formalize the definition of a self-replicating function.
 
-So far we haven't formally stated the similarity relationship between
+It can also be used to set up a sequence of functions via the following
+definitions:
+
+\[\begin{array}{rcl}
+  f^{(1)}_L & = & f(x), \\
+  f^{(i)}_R & = & f^{(i)}_L \\
+  f^{(i+1)}_S = f^{(i)}_L + f^{(i)}_R \\
+\end{array}\]
+
+TODO finish the above
 
 \section{The normal curve}\label{the-normal-curve}
 
