self_repl: Fix spacing around internal refs.
I found this tricky to figure out. This comment on a bug was the first big clue:

https://github.com/lierdakil/pandoc-crossref/issues/52

followed by a fair amount of trial and error. I think I was stuck for a while
not realizing that the string "$$i$$" was telling bash to replace $$ with the
pid of the current script.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -398,18 +398,21 @@ the identity function and
 
 The \emph{L}, \emph{R}, and \emph{S} subscripts are meant to hint that
 these functions act as the left addend, right addend, and the sum. The
-last equation in (~\ref{eq:exact_defn}) captures the similarity
+last equation in (\ref{eq:exact_defn}) captures the similarity
 relationship between the addend \(f = f_L\) and the sum
 \(f_S = f_L + f_R\).
 
 \textbf{Example} The ramp functions given in
-§~\ref{sec:rampux5ffunctions} and §~\ref{sec:nonlinearux5framps}, viewed
+§\ref{sec:rampux5ffunctions} and §\ref{sec:nonlinearux5framps}, viewed
 as \(K-\)functions, all adhere to the general form
 
 \[K_{0,1,2,3} + K_{2,3,4,5} = K_{0,1,4,5}.\]
 
 TODO Give the example \(s,t_1,t_2\) values. Consider segue into next
 section.
+
+TODO Earlier, mention that s, t\_1, and t\_2 are meant to be a shift and
+transformations.
 
 \subsubsection{\texorpdfstring{All possible positive curves for the
 example \(s,t_1,t_2\)
